--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="contact.html">Contact US</a></li>
         </nav>
     </header>
-    <main>
+    <main class="flora">
         <div class="featured">
             <img>
 
