--- a/productdetails.html
+++ b/productdetails.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main class="flowerdetails">
-        <div calss="details">
+        <div id="details">
 
         </div>
         
