--- a/featured.html
+++ b/featured.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link href="CSS/styles.css" rel="stylesheet">
-    <script defer src="js/index.js"></script>
-    <title>Flora Flower: Home page</title>
+    <script defer src="js/featured.js"></script>
+    <title>Flora Flower: Featured page</title>
 </head>
 <body>
     <header>
@@ -21,8 +21,8 @@
             <li><a href="contact.html">Contact US</a></li>
         </nav>
     </header>
-    <main class="flora">
-        <div class="singel">
+    <main class="featuredflowers">
+        <div class="featured">
             <p></p>
             <img>
 
