--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
         <nav>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
-            <li><a href="About.html">About Us</a></li>
+            <li><a href="featured.html">Featured</a></li>
             <li><a href="contact.html">Contact US</a></li>
         </nav>
     </header>
