--- a/About.html
+++ b/About.html
@@ -30,12 +30,17 @@
             
         </nav>
     </header>
-    <main class="flora-container">
-        <div class="singel">
-            <p></p>
-            <img>
-
-        </div>
+    <main class="About">
+        <h1>About Us</h1>
+        <h2>Facts about Flowers</h2>
+        <p>
+            A flower is a reproductive organ found in most flowering plants.
+            The flower structure contains the plant's genitals, and its function is to produce seeds through sexed propagation.
+            In many smaller plants, the flower is by far the most conspicuous part. Therefore, such plants in their entirety are often simply called "flowers". In certain plants, the flowers give rise to the fruits during the season." Source: Wikipedia  
+        </p>
+        <P>
+            Flora Flower works together with many Florist round the globe on the constitution of beautiful categories of flowers for the different occassions and moments in our customers' lives. As a florist, it is not only the bindery that counts, but also being able to run a store in a responsible manner, both financially, marketing and management-wise. Together, at Flora Flowers we make sure all our customers get the best of all the services we offer.
+        </P>
     </main>
     <footer>
         <div class="footer-flexbox">
