--- a/products.html
+++ b/products.html
@@ -33,10 +33,10 @@
         <div class="flowercontainer">
         <h1>Flowers</h1>
         <section class="flowers">
-            <a href ="productdetails.html" class ="flowers-block">
+            <div class ="flowers-block">
                 
                 <img>
-            </a>
+            </div>
         </section>
     </main>
     <footer>
